<resources>
    <string name="app_name">E-commerce_app</string>
    <string name="rightAddress">The Right Address\nFor Shopping\nAnyday</string>
    <string name="qulity">It is now very easy to reach the\nbest quality among the\nproducts on the internet!</string>
    <string name="my_app_name">ShopFlow</string>
    <string name="txt_btn_register">Register</string>
    <string name="txt_btn_start">Start</string>
    <string name="txt_btn_login">Login</string>
    <string name="blury_background_img">blury_background_img</string>
    <string name="let_s_login">Let\'s Login</string>
    <string name="don_t_have_account_register_now">Don\'t have account? Register now</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="Fotget_Password">Fotget Password?</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="let_s_register">Let\'s Register</string>
    <string name="do_have_account_log_in">do you have an account? log in</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="reset_password">Reset Password</string>
    <string name="we_will_send_you_the_password_reset_link_to_your_email">we will send you the password reset link to your email</string>
    <string name="g_cancel">Cancel</string>
    <string name="g_send">Send</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="search_now">Search Now</string>
    <string name="scotch_premium">Scotch Premium</string>
    <string name="_2000">2000DH</string>
    <string name="_1600">1600DH</string>
    <string name="see_product">See product</string>
    <string name="chair">Chair</string>
    <string name="best_deals">Best deals</string>
    <string name="best_products">Best Products</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="_2000dh">2000DH</string>
    <string name="your_shopping_cart_is_empty">Your shopping cart is empty</string>
    <string name="check_out">Check out</string>
    <string name="total">Total</string>
    <string name="my_cart">My Cart</string>
</resources>