<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/tv_resetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/verySmallMargin"
        android:layout_marginTop="@dimen/verySmallMargin"
        android:fontFamily="@font/poppins_thin"
        android:hint="@string/reset_password"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_resetPassword_info"
        android:layout_width="0dp"
        android:layout_marginEnd="@dimen/verySmallMargin"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/we_will_send_you_the_password_reset_link_to_your_email"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_resetPassword"
        app:layout_constraintTop_toBottomOf="@+id/tv_resetPassword" />

    <EditText
        android:id="@+id/ed_email_reset_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="@dimen/verySmallMargin"
        android:layout_marginBottom="@dimen/mediumMargin"
        app:layout_constraintEnd_toEndOf="@+id/tv_resetPassword_info"
        app:layout_constraintStart_toStartOf="@+id/tv_resetPassword_info"
        app:layout_constraintTop_toBottomOf="@+id/tv_resetPassword_info" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/verySmallMargin"
        android:layout_marginBottom="@dimen/mediumMargin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ed_email_reset_password"
        app:layout_constraintStart_toStartOf="@+id/ed_email_reset_password"
        app:layout_constraintTop_toBottomOf="@+id/ed_email_reset_password">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/buttonCorners"
            android:layout_weight="1"
            android:background="@drawable/white_background"
            android:text="@string/g_cancel"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/buttonCorners"
            android:layout_weight="1"
            android:background="@drawable/blue_background"
            android:text="@string/g_send"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>