<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardProductImages"
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:layout_marginHorizontal="@dimen/smallMargin"
            android:layout_marginTop="@dimen/mediumMargin"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPagerProductImages"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                />

            <ImageView
                android:id="@+id/image_close"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="5dp"
                android:src="@drawable/ic_close"
                app:tint="@color/g_black" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearTitlePrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/smallMargin"
            android:layout_marginTop="@dimen/mediumMargin"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardProductImages">

            <TextView
                android:id="@+id/tvProductsName"
                style="@style/h3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="..........."
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productPrice"
                style="@style/h3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2000dh"
                android:textColor="@color/g_gray" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvProductDescription"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2000"
            android:textColor="@color/g_gray700"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/linearTitlePrice"
            app:layout_constraintTop_toBottomOf="@id/linearTitlePrice" />

        <View
            android:id="@+id/topLine"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/g_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvProductDescription" />

        <LinearLayout
            android:id="@+id/linearProductPref"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/topLine"
            app:layout_constraintStart_toStartOf="@id/topLine"
            app:layout_constraintTop_toBottomOf="@id/topLine">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvProductColors"
                    style="@style/h3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color"
                    android:textColor="@color/black" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvColors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layoutAnimation="@anim/layout_slide_in_animation" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvProductSize"
                    style="@style/h3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size"
                    android:textColor="@color/black" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_sizes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layoutAnimation="@anim/layout_slide_in_animation" />
            </LinearLayout>

        </LinearLayout>


        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/buttonAddToCart"
            style="@style/blueButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/mediumButtonHeight"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="20dp"
            android:text="@string/add_to_cart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/linearProductPref"
            app:layout_constraintStart_toStartOf="@id/linearProductPref"
            app:layout_constraintTop_toBottomOf="@id/linearProductPref"
            app:spinning_bar_color="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>